--- a/css/styles.css
+++ b/css/styles.css
@@ -167,19 +167,16 @@ button {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    flex-basis: calc((100% - 216px) / 4);
 }
 
 .methods-item {
     color: #2e2f42;
-    text-align: center;
     font-size: 36px;
     font-weight: 700;
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     margin-bottom: 8px;
-    align-self: stretch;
 }
 
 .methods-item-descr {
@@ -229,7 +226,6 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    flex-basis: calc((100% - 216px) / 4);
 }
 
 .team-list-item-text {
@@ -306,7 +302,6 @@ button {
 
 .portfolio-list-item {
     background: #fff;
-    flex-basis: calc((100% - 240px) / 6);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -921,6 +916,10 @@ input::placeholder {
         }
     }
 
+    .methods-item {
+        align-self: center;
+    }
+
     .team-container {
         padding-left: 28px;
         padding-right: 28px;
@@ -938,7 +937,6 @@ input::placeholder {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 528px;
     }
 
     .navigation-list {
@@ -1016,10 +1014,6 @@ input::placeholder {
         gap: 24px;
     }
 
-    .methods-item {
-        align-self: self-start;
-    }
-
     .team-list {
         flex-direction: row;
         flex-wrap: wrap;
@@ -1066,6 +1060,10 @@ input::placeholder {
 @media screen and (min-width: 768px) and (max-width: 1157px) {
     .container {
         max-width: 768px;
+    }
+
+    .logo {
+        margin-right: 120px;
     }
 
     .main-page {
@@ -1135,6 +1133,10 @@ input::placeholder {
         padding-right: 15px;
     }
 
+    .logo {
+        margin-right: 76px;
+    }
+
     .contacts-list {
         flex-direction: row;
         column-gap: 40px;
@@ -1187,8 +1189,13 @@ input::placeholder {
         line-height: 1.2;
     }
 
+    .methods-item-descr {
+        font-weight: 400;
+    }
+
     .methods-icon {
         width: 100%;
+        height: 112px;
         border-radius: 4px;
         border: 1px solid #8e8f99;
         background-color: #f4f4fd;
